# symptom-checker

./: ProcFile  Procfile  README.md  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: codeql.yml
data/processed/: disease_to_genes_ids.json  symptom_text_to_ids.json  symptoms_to_disease_ids.json
symptom-checker/: pyproject.toml
symptom-checker/tests/: test_symptom_checker.py
symptom_checker/: config.py
symptom_checker/construction/: db_to_json.py  fetch_db.py  finalize_db.py
symptom_checker/includes/: db_processing.py  description_parsing.py  utils.py
symptom_checker/server/check_symptoms/: apps.py  views.py
symptom_checker/server/server/: settings.py  urls.py
